added a new cat image .

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-fluid">
     <h1>The Greatest Cat Website Ever</h1>
-    <img src="imgs/gitcat.jpg" alt="Git Cat">
+    <img src="imgs/cat.jpg" alt="Git Cat">
 
 
     </div>
